tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_non_lvalue_char.fg
/; EXPECT_ERROR: AssignmentToNonLValue
var x:char = 'a'
'b' = x

